# StackVM

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md
lib/: CMakeLists.txt
scripts/: gen_executors.py  opcodes.example.assignements.c  opcodes.example.declarations.h  opcodes.example.definitions.c  opcodes.example.txt
spec/: Object_Draft_2018.txt  VMSpecs_Draft_2018.odt
src/: CMakeLists.txt  main.c
src/vm/: bytecode.c  bytecode.h  exception.c  exception.h  executable.c  executable.h  executor.c  executor.h  float.c  float.h  guard.c  guard.h  heap.c  heap.h  integer.c  integer.h  libstring.c  libstring.h  long.c  long.h  main.c  math.c  math.h  object.c  object.h  objectbytecode.c  objectbytecode.h  opcode.h  stack.c  stack.h  stackobject.c  stackobject.h  state.c  state.h  stream.c  stream.h  type.h  vm.c  vm.h  vmstring.c  (+1 more)
test/: CMakeLists.txt  main.c  test_bytecode.c  test_executable.c  test_executor.c  test_float.c  test_heap.c  test_integer.c  test_long.c  test_math.c
vm/: call.h  constant.h  constants.c  constants.h  executable.c  executable.h  executor.c  executor.h  heap.c  heap.h  main.c  object.c  object.h  opcode.h  stack.c  stack.h  state.c  state.h  stream.c  stream.h  type.h  vm.c  vm.h  vmstring.c  vmstring.h
